src/components/PersonaWrap/PersonaWrap.scss
@use '../../../styles/mixins';
@use '../variables';

$block: '.#{variables.$ns}persona';

#{$block} {
    $avatarSize: 28px;
    $transitionDuration: 0.1s;
    $transitionTimingFunction: ease-in-out;

    height: $avatarSize;
    display: inline-flex;
    align-items: center;
    position: relative;
    border-radius: 20px;

    transition-property: background-color;
    transition-duration: $transitionDuration;
    transition-timing-function: $transitionTimingFunction;

    &_theme_default {
        &:after {
            position: absolute;
            z-index: -1;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            content: '';
            border: 1px solid var(--yc-color-line-generic);
            border-radius: 20px;

            transition-property: border-color;
            transition-duration: $transitionDuration;
            transition-timing-function: $transitionTimingFunction;
        }
    }

    &_empty {
        &#{$block}_size_s {
            padding-left: 12px;
        }

        &#{$block}_size_n {
            padding-left: 16px;
        }
    }

    &_clickable:hover {
        cursor: pointer;
        background-color: var(--yc-color-base-simple-hover);

        &:after {
            border-color: transparent;
        }
    }

    &__main {
        height: $avatarSize;
        display: inline-flex;
        align-items: center;
        padding-right: 6px;

        #{$block}_closeable & {
            padding-right: 0;
        }
    }

    &__avatar {
        width: $avatarSize;
        height: $avatarSize;
        display: flex;
        align-items: center;
        border-radius: 50%;
        overflow: hidden;
        justify-content: center;
        background-color: var(--yc-color-base-simple-hover-solid);

        transition-property: background-color;
        transition-duration: $transitionDuration;
        transition-timing-function: $transitionTimingFunction;

        #{$block}_size_n & {
            margin-right: 12px;
        }

        #{$block}_size_s & {
            margin-right: 6px;
        }

        #{$block}_clickable:hover & {
            background-color: var(--yc-color-base-generic);
        }

        span {
            @include mixins.text-accent;
            text-transform: uppercase;
            font-size: 11px;
            line-height: 11px;
        }

        img {
            width: $avatarSize;
            height: $avatarSize;
            object-fit: cover;
        }
    }

    &__text {
        #{$block}_size_n & {
            @include mixins.text-body-2;
            margin-right: 10px;
        }

        #{$block}_size_s & {
            @include mixins.text-body-1;
            margin-right: 6px;
        }
    }

    &__close {
        height: $avatarSize;
        width: 16px;
        display: inline-flex;
        align-items: center;
        justify-content: center;
        cursor: pointer;
        padding-right: 6px;
        color: var(--yc-color-text-secondary);

        transition-property: color;
        transition-duration: $transitionDuration;
        transition-timing-function: $transitionTimingFunction;

        &:hover {
            color: var(--yc-color-text-primary);
        }
    }
}

